// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard Page 2 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_a_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_a_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_a_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_a_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Page 3 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_k_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_k_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_k_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_k_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Page 4 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_u_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_u_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_u_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_u_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;

exports[`Dashboard Story 1`] = `
<div
  data-color-scheme="light"
  data-size="auto"
  lang="nb"
>
  <h1 data-size="md">
    Schweigaardsgate skole
  </h1>
  <ds-tabs data-utabs>
    <ds-tablist role="tablist">
      <ds-tab
        aria-controls="_r_0_-overview"
        aria-selected="true"
        data-value="overview"
        id="<removed>"
        role="tab"
        tabindex="0"
      >
        Oversikt
      </ds-tab>
      <ds-tab
        aria-controls="_r_0_-tests"
        aria-selected="false"
        data-value="tests"
        role="tab"
        tabindex="-1"
      >
        Prøver
      </ds-tab>
      <ds-tab
        aria-controls="_r_0_-test-answers"
        aria-selected="false"
        data-value="test-answers"
        role="tab"
        tabindex="-1"
      >
        Prøvesvar
      </ds-tab>
      <ds-tab
        aria-controls="_r_0_-settings"
        aria-selected="false"
        data-value="settings"
        role="tab"
        tabindex="-1"
      >
        Innstillinger
      </ds-tab>
    </ds-tablist>
    <ds-tabpanel
      aria-hidden="false"
      aria-labelledby="<removed>"
      id="<removed>"
      role="tabpanel"
      tabindex="0"
    >
      <p data-variant="default">
        Her får du en oversikt over all den overordnede informasjonen.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøveoversikt
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøver for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Prøver
          </h2>
          <div>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve X
              </h2>
            </a>
            <a
              data-color="neutral"
              data-variant="default"
              href="/"
            >
              <h2>
                Administrer prøve Y
              </h2>
            </a>
          </div>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <p data-variant="default">
        Oversikt over prøvesvar for Schweigaardsgate skole.
      </p>
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <h2>
            Karakterfordeling prøvesvar
          </h2>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <span
            aria-hidden="true"
            data-variant="rectangle"
            style="width: 15.625rem;"
          >
          </span>
          <div>
            <svg
              aria-label="laster inn"
              data-size="lg"
              role="img"
              viewbox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
              <circle
                cx="25"
                cy="25"
                fill="none"
                r="20"
                stroke-width="5"
              >
              </circle>
            </svg>
          </div>
        </div>
      </div>
    </ds-tabpanel>
    <ds-tabpanel
      aria-hidden="true"
      hidden
      id="<removed>"
      role="tabpanel"
    >
      <div>
        <div>
          <div data-variant="default">
            <h2>
              Viktige datoer
            </h2>
            <ul>
              <li>
                Prøvestart: 12. april
              </li>
              <li>
                Prøvefrist: 5. mai
              </li>
              <li>
                Svarfrist: 28. mai
              </li>
            </ul>
          </div>
        </div>
        <div>
          <div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Generelle innstillinger
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Mørk modus
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Et mørkere grensesnitt for å spare øynene.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  checked
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="auto-updates"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Automatiske oppdateringer
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Bruk automatisk oppdateringer for å holde systemet oppdatert.
                </div>
              </ds-field>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Personvern
              </h2>
              <fieldset aria-labelledby="<removed>">
                <legend
                  data-weight="medium"
                  id="<removed>"
                >
                  Hvem kan se profilen din?
                </legend>
                <p
                  data-variant="default"
                  id="<removed>"
                >
                  Velg hvem som har tilgang til å se profilen din.
                </p>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    checked
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="public"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Alle
                  </label>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    aria-describedby="<removed>"
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="friends"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun venner
                  </label>
                  <div
                    data-field="description"
                    id="<removed>"
                  >
                    Bare personer du har lagt til kan se profilen din.
                  </div>
                </ds-field>
                <ds-field data-clickdelegatefor="<removed>">
                  <input
                    id="<removed>"
                    name="privacy"
                    type="radio"
                    value="private"
                  >
                  <label
                    data-weight="regular"
                    for="<removed>"
                  >
                    Kun meg
                  </label>
                </ds-field>
                <p
                  data-field="validation"
                  hidden
                  id="<removed>"
                >
                </p>
              </fieldset>
            </div>
            <div
              data-color="support1"
              data-variant="tinted"
            >
              <h2>
                Varsler
              </h2>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="sound-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Lydvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Spill av lyd når et varsel mottas.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="popup-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  Popup-varsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Vis popup-varsler på skjermen.
                </div>
              </ds-field>
              <ds-field data-clickdelegatefor="<removed>">
                <input
                  aria-describedby="<removed>"
                  id="<removed>"
                  role="switch"
                  type="checkbox"
                  value="email-notifications"
                >
                <label
                  data-weight="regular"
                  for="<removed>"
                >
                  E-postvarsler
                </label>
                <div
                  data-field="description"
                  id="<removed>"
                >
                  Tillat e-postvarsler for viktige oppdateringer.
                </div>
              </ds-field>
            </div>
          </div>
        </div>
      </div>
    </ds-tabpanel>
  </ds-tabs>
</div>
`;
